# financial_data

./: .env.sample  .tool-versions  Makefile  README.md  alembic.ini  manage.py  mypy.ini  pyproject.toml
.github/actions/setup-action/: action.yml
.github/workflows/: ci.yml  main.yml
alembic/: env.py
alembic/versions/: 82096b709f10_create_symbol_and_exchange_tables.py  f6284d5718f5_create_symbol_and_exchange_tables.py
financial_data/: base.py  db.py  hello_world.py  types.py
financial_data/config/: common.py  env.py
financial_data/core/: __init__.py  base.py  database.py  types.py  utils.py
financial_data/core/tasks/: __init__.py  base.py  database.py
financial_data/iex/: __init__.py  base.py  settings.py  tasks.py  types.py
financial_data/iex/migrations/: env.py  script.py.mako
financial_data/iex/migrations/versions/: 7bd1eff2af2b_initial_migration.py  9cc2e0d1b95a_initial_migration.py
financial_data/iex/models/: __init__.py  _meta.py  exchange.py  meta.py  symbol.py  us_exchange.py
financial_data/iex/tasks/: __init__.py  api.py  reference_data.py
financial_data/models/: __init__.py  exchange.py  symbol.py  us_exchange.py
financial_data/models/iex/: __init__.py  exchange.py  symbol.py  us_exchange.py
financial_data/tasks/: __init__.py  database.py  iex.py  task.py
flows/: core_data.py  hello_flow.py  iex_reference_data.py
flows/iex/: reference_data.py  run_config.py
tests/: test_financial_data.py
