[tool.poetry]
name = "financial_data"
version = "0.1.0"
description = ""
authors = ["KevinCybura <kevincybura@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
prefect = {extras = ["viz"], version = "^0.14.14"}
SQLAlchemy = "^1.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.8.0"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
