[tool.poetry]
name = "financial_data"
version = "0.1.0"
description = ""
authors = ["KevinCybura <kevincybura@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prefect = {extras = ["github", "viz"], version = "^0.14.14"}
psycopg2-binary = "^2.8.6"
alembic = "^1.5.8"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
SQLAlchemy = {extras = ["mypy"], version = "^1.4.14"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.8.0"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.circleci
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | staticfiles
    | media
  )/
  | code_sample.py
)
'''

[tool.isort]
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
skip = ["venv", ".venv", "media", "staticfiles"]
